--- a/Lab_JS_debug/Lab_210/index_0.html
+++ b/Lab_JS_debug/Lab_210/index_0.html
@@ -52,6 +52,10 @@
         //     $("#report").append("資料有缺<br>");
         //     return;
         // }
+        if (mailAddress == undefined) {
+            $("#report").append("資料有缺<br>");
+            return;
+        }
         $("#report").append(mailAddress.toString() + "<br>");
     }
     
