--- a/Lab_JS_debug/Lab_220/index_0.html
+++ b/Lab_JS_debug/Lab_220/index_0.html
@@ -47,10 +47,13 @@
         "lionel.messi@gmail.com"
         ];
     
+    // function sendMail(mailAddress) {
+    //     $("#report").append(mailAddress.toString() + "<br>");
+    // }
     function sendMail(mailAddress) {
-        $("#report").append(mailAddress.toString() + "<br>");
+        try{$("#report").append(mailAddress.toString() + "<br>");}
+        catch(e){$("#report").append(e.message + "<br>");}
     }
-    
     for (i = 0; i < mailList.length; i++) {
         sendMail(mailList[i]);
     }
