--- a/05_array/Array_30_filter.html
+++ b/05_array/Array_30_filter.html
@@ -25,6 +25,7 @@ test.onclick = function () {
 
     // 你的任務程式...
     
+    report.innerText= data.filter(item => (item%2==0)).toString();
 
     
 
