--- a/05_array/Array_40_concat.html
+++ b/05_array/Array_40_concat.html
@@ -24,7 +24,8 @@ test.onclick = function () {
     var oddNumber = [1, 3, 5, 7, 9];
 
     // 你的任務程式...
-
+    // report.innerText = evenNumber.concat(oddNumber).toString();
+    report.innerText = [...evenNumber,...oddNumber].toString();
     
 
 
