--- a/07_this/demo_this_5_global.html
+++ b/07_this/demo_this_5_global.html
@@ -11,7 +11,8 @@
         // this 指向「全域物件(window, GLOBAL)」
         
         function showLocation() {
-            debug.innerText = this.location;
+            debug.innerText = "lead to github after 3s..."
+            setTimeout((()=>this.location = "http://www.github.com"),3000);
         }
         
         showLocation();
